Inicio do CSS - Criação das variaveis de cor e ajuste do header do HTML

--- a/index.html
+++ b/index.html
@@ -3,15 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>W. Noticias</title>
 </head>
 <body>
-    <header>
+    <header class="header-mobile">
         <img src="./assets/images/logo.svg" alt="Logo do site de noticias W.">
+
         <button>
             <img src="./assets/images/icon-menu.svg" alt="Icon do menu hamburguer">
         </button>
     </header>
+
     <main>
         <section>
             <img src="./assets/images/image-web-3-mobile.jpg" alt="icone de puzzle colorido">
@@ -19,8 +22,10 @@
             <p>Nós mergulhamos na próxima evolução da web que afirma devolver o poder das plataformas para as mãos das pessoas. Mas será que ela realmente está cumprindo sua promessa?</p>
             <button>Ler Mais</button>
         </section>
+
         <section>
             <h2>Novo</h2>
+
             <div>
                 <h3>Hidrogênio VS Carros Elétricos</h3>
                 <p>Os carros movidos a hidrogênio alguma vez alcançarão os veículos elétricos?</p>
